# kit-test-scripts

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test_build.yml
kit_test/: arduino_flash.py  arduino_test.py  camera_test.py  cli.py  motor_test.py  power_test.py  servo_test.py
kit_test/arduino_binaries/: __init__.py  ruggeduino-2.hex  ruggeduino_test-1.hex
kit_test/hal/: __init__.py  discovery.py  motor_board.py  power_board.py  serial_wrapper.py  servo_board.py  utils.py
kit_test/inventory_helpers/: __init__.py  collate_items.py  collate_tested.py  empty_boxes.py
